objects/Web_Conference__c.object
<CustomObject>
    <fields>
        <fullName>Advisory_com_Attendee_User_Name__c</fullName>
        <formula>Advisory_com_Attendee_User__r.FirstName  + &quot; &quot; +  Advisory_com_Attendee_User__r.LastName</formula>
        <label>Attendee User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advisory_com_Attendee_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attendee User</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Web Conferences (Registered Attendee User)</relationshipLabel>
        <relationshipName>Webconferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Advisory_com_Registered_By_User_Name__c</fullName>
        <formula>Advisory_com_Registered_By_User__r.FirstName + &quot; &quot; +  Advisory_com_Registered_By_User__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registered By User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advisory_com_Registered_By_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Registered By User</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Web Conferences (Advisory.com Registered By User)</relationshipLabel>
        <relationshipName>Webconferences1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attendee_Email__c</fullName>
        <label>Attendee Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Attendee_Fax__c</fullName>
        <label>Attendee Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Attendee_First_Name__c</fullName>
        <label>Attendee First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Last_Name__c</fullName>
        <label>Attendee Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Middle_Initial__c</fullName>
        <label>Attendee Middle Initial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Phone__c</fullName>
        <label>Attendee Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Attendee_Prefix__c</fullName>
        <label>Attendee Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Site_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attendee Site Profile</label>
        <referenceTo>Site_Profile__c</referenceTo>
        <relationshipLabel>Web Conferences (Attendee Site Profile)</relationshipLabel>
        <relationshipName>Web_Conferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attendee_Suffix__c</fullName>
        <label>Attendee Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Canceled_By__c</fullName>
        <inlineHelpText>Who canceled the event (Admin Tool or User Request)</inlineHelpText>
        <label>Canceled By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Canceled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Canceled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <label>Event Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_URL__c</fullName>
        <label>Event URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Message_Type__c</fullName>
        <description>Created as a part of CR-20140228-4676</description>
        <label>Message Type</label>
        <picklist>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Register_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Register Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registered_By_Site_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Registered By Site Profile</label>
        <referenceTo>Site_Profile__c</referenceTo>
        <relationshipLabel>Web Conferences (Registered By Site Profile)</relationshipLabel>
        <relationshipName>Web_Conferences1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <description>Used to determine the correct web conference template text.  This should be auto-populated when a webconference is inserted via the webservice callout to SF from sitecore.</description>
        <label>Site</label>
        <picklist>
            <picklistValues>
                <fullName>Advisory.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAB.com</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <label>Web Conference</label>
    <nameField>
        <displayFormat>W-{000000}</displayFormat>
        <label>Webconference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Web Conferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>